data/diff_tests/wasmtime/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1293.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8c\80\80\80\00\01\03\6d\6f\64\04\66"
    "\75\6e\63\00\00\03\82\80\80\80\00\01\00\07\88\80"
    "\80\80\00\01\04\6d\61\69\6e\00\01\0a\98\80\80\80"
    "\00\01\92\80\80\80\00\00\02\7f\02\7f\02\7f\02\7f"
    "\10\00\0c\03\0b\0b\0b\0b\0b"
  )
""
)